added line class

--- a/2021AoCDay5.ipynb
+++ b/2021AoCDay5.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,52 +99,16 @@
     "    def display(self):\n",
     "        print(self.x, self.y)\n",
     "        \n",
-    "def is_horizontal_or_vertical(coordinate):\n",
-    "    return (coordinate[0].x == coordinate[1].x) | (coordinate[0].y == coordinate[1].y)"
+    "def is_horizontal_or_vertical(line):\n",
+    "    return (line.start.x == line.stop.x) | (line.start.y == line.stop.y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = read_file('./day5.txt')\n",
-    "data = [val.split(' -> ') for val in data]\n",
-    "coordinates = [[Point(val[0].split(',')),Point(val[1].split(','))]  for val in data]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 307,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "part1_coords = [val for val in coordinates if is_horizontal_or_vertical(val)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 308,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_max = max([val[0].x for val in coordinates] + [val[1].x for val in coordinates])\n",
-    "y_max = max([val[0].x for val in coordinates] + [val[1].x for val in coordinates])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 309,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sorted_coords(start, stop):\n",
-    "    if start > stop:\n",
-    "        start, stop = stop, start\n",
-    "    return np.arange(start, stop+1)\n",
-    "\n",
-    "\n",
     "def sorted_coords(start, stop):\n",
     "    if start > stop:\n",
     "        stop = stop - 1\n",
@@ -154,24 +118,74 @@
     "        increment = 1\n",
     "    return np.arange(start, stop, increment)\n",
     "\n",
+    "def range_x(line):\n",
+    "    return sorted_coords(line.start.x,line.stop.x)\n",
     "\n",
-    "def points_on_line(coord):\n",
-    "    if (coord[1].x - coord[0].x) == 0:\n",
-    "        y = sorted_coords(coord[0].y, coord[1].y)\n",
-    "        x = np.zeros_like(y) + coord[1].x\n",
-    "    elif (coord[1].y - coord[0].y) == 0:\n",
-    "        x = sorted_coords(coord[0].x, coord[1].x)\n",
-    "        y = np.zeros_like(x) + coord[1].y\n",
-    "    else:\n",
-    "        y = sorted_coords(coord[0].y, coord[1].y)\n",
-    "        x = sorted_coords(coord[0].x, coord[1].x)\n",
+    "def range_y(line):\n",
+    "    return sorted_coords(line.start.y,line.stop.y)\n",
+    "\n",
+    "class Line(object):\n",
+    "    \n",
+    "    def __init__(self, point):\n",
+    "        self.start = point[0]\n",
+    "        self.stop = point[1]\n",
+    "    \n",
+    "    def display(self):\n",
+    "        print('start x,y:', self.start.x, self.start.y)\n",
+    "        print('stop x,y:', self.stop.x, self.stop.y)\n",
     "        \n",
-    "    return np.stack([y,x]).T\n"
+    "    def max_x(self):\n",
+    "        return max(self.start.x, self.stop.x)\n",
+    "    \n",
+    "    def max_y(self):\n",
+    "        return max(self.start.y, self.stop.y)\n",
+    "    \n",
+    "    def all_points(self):\n",
+    "        if (self.stop.x - self.start.x) == 0:\n",
+    "            y = range_y(self)\n",
+    "            x = np.zeros_like(y) + self.stop.x\n",
+    "        else:\n",
+    "            m = (self.stop.y - self.start.y) / (self.stop.x - self.start.x)\n",
+    "            b = self.stop.y - (m*self.stop.x)\n",
+    "            x = range_x(self)\n",
+    "            y = m*x + b\n",
+    "        return np.stack([y,x]).T.astype('int')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = read_file('./day5.txt')\n",
+    "data = [val.split(' -> ') for val in data]\n",
+    "coordinates = [[Point(val[0].split(',')),Point(val[1].split(','))]  for val in data]\n",
+    "lines = [Line(val) for val in coordinates]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "part1_lines = [val for val in lines if is_horizontal_or_vertical(val)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_max = max([val.max_x() for val in lines])\n",
+    "y_max = max([val.max_y() for val in lines])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -185,32 +199,19 @@
    "source": [
     "part1 = False\n",
     "if part1:\n",
-    "    coord_list = part1_coords\n",
+    "    all_lines = part1_lines\n",
     "else:\n",
-    "    coord_list = coordinates\n",
+    "    all_lines = lines\n",
     "    \n",
     "mask = np.zeros([x_max+1,y_max+1])\n",
     "\n",
-    "for coord in coord_list:\n",
-    "    out = points_on_line(coord)\n",
+    "for line in all_lines:\n",
+    "    out = line.all_points()\n",
     "    for val in out:\n",
     "        mask[val[0], val[1]] = mask[val[0], val[1]] + 1\n",
+    "        \n",
     "print(np.sum((mask>1) + 0))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
