output as point class

--- a/2021AoCDay5.ipynb
+++ b/2021AoCDay5.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,6 +123,10 @@
     "\n",
     "def range_y(line):\n",
     "    return sorted_coords(line.start.y,line.stop.y)\n",
+    "\n",
+    "def array_to_points(val):\n",
+    "    val = list(val)\n",
+    "    return [Point(coord) for coord in val]\n",
     "\n",
     "class Line(object):\n",
     "    \n",
@@ -149,12 +153,12 @@
     "            b = self.stop.y - (m*self.stop.x)\n",
     "            x = range_x(self)\n",
     "            y = m*x + b\n",
-    "        return np.stack([y,x]).T.astype('int')\n"
+    "        return array_to_points(np.stack([y,x]).T.astype('int'))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -208,17 +212,10 @@
     "for line in all_lines:\n",
     "    out = line.all_points()\n",
     "    for val in out:\n",
-    "        mask[val[0], val[1]] = mask[val[0], val[1]] + 1\n",
+    "        mask[val.x, val.y] = mask[val.x, val.y] + 1\n",
     "        \n",
     "print(np.sum((mask>1) + 0))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
