--- a/Advent Bag of Tricks.ipynb
+++ b/Advent Bag of Tricks.ipynb
@@ -46,6 +46,19 @@
     "def array2bin(binary_array):\n",
     "    return binary_array.dot(2**np.arange(binary_array.size)[::-1])\n",
     "\n",
+    "def list_str_intersection(a,b):\n",
+    "    return list(set(a).intersection(b))\n",
+    "\n",
+    "def list_str_not_intersection(a,b):\n",
+    "    return list(set(a).symmetric_difference(b))\n",
+    "\n",
+    "\n",
+    "def flatten_list_of_list(regular_list):\n",
+    "    return [item for sublist in regular_list for item in sublist]\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "## split a list of list (data) \n",
     "## seperated by delimitor ('')\n",
     "## into sublist (record)\n",
@@ -147,8 +160,28 @@
     "        except StopIteration:  # Python 3.5 pep 479 support\n",
     "            return\n",
     "        q.extend(next(it, fillvalue) for _ in range(step - 1))\n",
+    "        \n",
     "\n",
-    "        "
+    "def peaks(sig):\n",
+    "    \"\"\"\n",
+    "    detects peaks and valleys as defined by the first derivative changing signs\n",
+    "    0  : no peak\n",
+    "    2  : peak second derivative positve\n",
+    "    -2 : peak second derivative negative\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    signal : ndarray \n",
+    "        input signal to be analyzed\n",
+    "    Returns\n",
+    "    -------\n",
+    "    peak : ndarray\n",
+    "        list of indicies corresponding to peaks/valleys found in the time-domain of the signal\n",
+    "    \"\"\"\n",
+    "\n",
+    "    peak = signal.lfilter([-1, 1], [1], np.sign(np.diff(sig)))\n",
+    "    peak[0] = 0\n",
+    "    peak = np.append(peak, [0])\n",
+    "    return peak\n"
    ]
   }
  ],
