day 14, imroved documentation

--- a/2021AoCDay13.ipynb
+++ b/2021AoCDay13.ipynb
@@ -1,10 +1,36 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"1000\"\n",
+       "            height=\"600\"\n",
+       "            src=\"https://adventofcode.com/2021/day/13\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f98cc4fe080>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## "
+    "from IPython.display import IFrame\n",
+    "url = \"https://adventofcode.com/2021/day/13\"\n",
+    "IFrame(src=url, width=1000, height=600)"
    ]
   },
   {
@@ -85,116 +111,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'prtin' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-273-abd2ff0de86d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mval\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnew\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mprtin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'prtin' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "for val in new:\n",
-    "    prtin(''.join(list(val)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['#' '#' '#' '.']\n",
-      " ['#' '.' '.' '#']\n",
-      " ['#' '.' '.' '#']\n",
-      " ['#' '#' '#' '.']\n",
-      " ['#' '.' '#' '.']\n",
-      " ['#' '.' '.' '#']]\n",
-      "\n",
-      "[['#' '.' '.' '.']\n",
-      " ['#' '.' '.' '.']\n",
-      " ['#' '.' '.' '.']\n",
-      " ['#' '.' '.' '.']\n",
-      " ['#' '.' '.' '.']\n",
-      " ['#' '#' '#' '#']]\n",
-      "\n",
-      "[['#' '#' '#' '.']\n",
-      " ['#' '.' '.' '#']\n",
-      " ['#' '#' '#' '.']\n",
-      " ['#' '.' '.' '#']\n",
-      " ['#' '.' '.' '#']\n",
-      " ['#' '#' '#' '.']]\n",
-      "\n",
-      "[['.' '#' '#' '.']\n",
-      " ['#' '.' '.' '#']\n",
-      " ['#' '.' '.' '.']\n",
-      " ['#' '.' '.' '.']\n",
-      " ['#' '.' '.' '#']\n",
-      " ['.' '#' '#' '.']]\n",
-      "\n",
-      "[['.' '.' '#' '#']\n",
-      " ['.' '.' '.' '#']\n",
-      " ['.' '.' '.' '#']\n",
-      " ['.' '.' '.' '#']\n",
-      " ['#' '.' '.' '#']\n",
-      " ['.' '#' '#' '.']]\n",
-      "\n",
-      "[['.' '#' '#' '.']\n",
-      " ['#' '.' '.' '#']\n",
-      " ['#' '.' '.' '.']\n",
-      " ['#' '.' '#' '#']\n",
-      " ['#' '.' '.' '#']\n",
-      " ['.' '#' '#' '#']]\n",
-      "\n",
-      "[['#' '.' '.' '.']\n",
-      " ['#' '.' '.' '.']\n",
-      " ['#' '.' '.' '.']\n",
-      " ['#' '.' '.' '.']\n",
-      " ['#' '.' '.' '.']\n",
-      " ['#' '#' '#' '#']]\n",
-      "\n",
-      "[['#' '.' '.' '#']\n",
-      " ['#' '.' '.' '#']\n",
-      " ['#' '.' '.' '#']\n",
-      " ['#' '.' '.' '#']\n",
-      " ['#' '.' '.' '#']\n",
-      " ['.' '#' '#' '.']]\n",
-      "\n"
+      "###..#....###...##....##..##..#....#..#.\n",
+      "#..#.#....#..#.#..#....#.#..#.#....#..#.\n",
+      "#..#.#....###..#.......#.#....#....#..#.\n",
+      "###..#....#..#.#.......#.#.##.#....#..#.\n",
+      "#.#..#....#..#.#..#.#..#.#..#.#....#..#.\n",
+      "#..#.####.###...##...##...###.####..##..\n"
      ]
     }
    ],
    "source": [
-    "index = list(range(0,new.shape[1],5)) \n",
-    "for val in index:\n",
-    "    print(new[:,val:val+4])\n",
-    "    print()"
+    "for val in new:\n",
+    "    print(''.join(list(val)))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "RLBCJGLU"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
