--- a/2021AoCDay14.ipynb
+++ b/2021AoCDay14.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 460,
    "metadata": {},
    "outputs": [
     {
@@ -12,60 +12,48 @@
        "        <iframe\n",
        "            width=\"1000\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://adventofcode.com/2021/day/1\"\n",
+       "            src=\"https://adventofcode.com/2021/day/14\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f4a657c62d0>"
+       "<IPython.lib.display.IFrame at 0x7f4f4cbe0c88>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 460,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from IPython.display import IFrame\n",
-    "url = \"https://adventofcode.com/2021/day/1\"\n",
+    "url = \"https://adventofcode.com/2021/day/14\"\n",
     "IFrame(src=url, width=1000, height=600)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 418,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#import numpy as np\n",
-    "\n",
+    "import urllib.request\n",
     "from itertools import islice\n",
-    "from collections import deque"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def total_increase(data):\n",
-    "#     return np.nonzero(np.diff(np.array(data))>0)[0].shape[0]\n",
+    "from collections import deque\n",
     "\n",
-    "def read_file(filename):\n",
-    "    # read file\n",
-    "    with open(filename) as f:\n",
-    "        lines = f.readlines()\n",
-    "    output = [str.rstrip(line) for line in lines]    \n",
-    "    return output\n",
     "\n",
-    "def total_increase(data):\n",
-    "    data0 = data[:-1]\n",
-    "    data1 = data[1:]\n",
-    "    b_increase = [(val[0]-val[1])<0 for val in zip(data0, data1)]\n",
-    "    return len([val for val in b_increase if val])\n",
+    "def gather_input_data(url, sessionId, transform=lambda x: str(x, \"utf-8\").strip('\\n')):\n",
+    "    request = urllib.request.Request(url)\n",
+    "    request.add_header(\"cookie\", \"session={}\".format(sessionId)) # Source the data directly from AoC\n",
+    "\n",
+    "    values = []\n",
+    "    with urllib.request.urlopen(request) as data:\n",
+    "        for line in data:\n",
+    "            values.append(transform(line))\n",
+    "\n",
+    "    return values\n",
     "\n",
     "def sliding_window(data, size=2, step=1, fillvalue=None):\n",
     "    '''\n",
@@ -102,62 +90,98 @@
     "        except StopIteration:  # Python 3.5 pep 479 support\n",
     "            return\n",
     "        q.extend(next(it, fillvalue) for _ in range(step - 1))\n",
+    "        \n",
+    "def answer(c,last):\n",
+    "    res = {} \n",
+    "    for ele in c:\n",
+    "        if ele[0] in res:\n",
+    "            res[ele[0]] = res[ele[0]] + c[ele]\n",
+    "        else:\n",
+    "            res[ele[0]] =c[ele]\n",
+    "    res[last] = res[last] + 1\n",
+    "    return max(res.values()) - min(res.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 440,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sessionId = '53616c7465645f5f8470e6a4190008858c3b31263eba45359fbf74d0372f05e0c54b1d484b0a6510947dd2e09f9300f9'\n",
+    "url = \"https://adventofcode.com/2021/day/14/input\"\n",
+    "data = gather_input_data(url, sessionId)\n",
+    "base = data[0]\n",
+    "rules = dict([val.split(' -> ')for val in data[2:]])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 441,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rules={'CH':'B','HH':'N','CB':'H','NH':'C','HB':'C','HC':'B','HN':'C','NN':'C','BH':'H','NC':'B','NB':'B',\n",
+    "#        'BN':'B','BB':'N','BC':'B','CC':'N','CN':'C'}\n",
+    "# base = 'NNCB'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 442,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Part 1\n",
+      "2435\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
-    "        "
+    "last = base[-1]\n",
+    "from collections import Counter\n",
+    "win = sliding_window(base, 2,1)\n",
+    "c = Counter([''.join(list(val)) for val in win])\n",
+    "\n",
+    "for ii in range(40):\n",
+    "    nc = Counter()\n",
+    "\n",
+    "    for ele in c:\n",
+    "        new = rules[ele]\n",
+    "        if c[ele] == 0:\n",
+    "            nc[ele[0]+new] = nc[ele[0]+new] + 1\n",
+    "            nc[new+ele[1]] = nc[new+ele[1]] + 1\n",
+    "        else:\n",
+    "            nc[ele[0]+new] = nc[ele[0]+new]+c[ele]\n",
+    "            nc[new+ele[1]] = nc[new+ele[1]]+c[ele]\n",
+    "    c = nc.copy()\n",
+    "    if ii == 9:\n",
+    "        print('Part 1')\n",
+    "        print(answer(c, last))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = read_file('./day1.txt')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# strip <cr> and cast as integers\n",
-    "data = [int(val) for val in data]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1713\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(total_increase(data))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 443,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1734\n"
-     ]
+     "data": {
+      "text/plain": [
+       "2587447599164"
+      ]
+     },
+     "execution_count": 443,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "iwindow = sliding_window(data, 3, 1, fillvalue=None)\n",
-    "print(total_increase([sum(window) for window in iwindow]))\n"
+    "answer(c,last)"
    ]
   },
   {
@@ -170,9 +194,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python (terminator)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "terminator"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -184,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
