--- a/2021AoCDayX.ipynb
+++ b/2021AoCDayX.ipynb
@@ -1,10 +1,36 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"1000\"\n",
+       "            height=\"600\"\n",
+       "            src=\"https://adventofcode.com/2021\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7facc0ab6828>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## "
+    "from IPython.display import IFrame\n",
+    "url = \"https://adventofcode.com/2021\"\n",
+    "IFrame(src=url, width=1000, height=600)"
    ]
   },
   {
@@ -13,12 +39,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_file(filename):\n",
-    "    # read file\n",
-    "    with open(filename) as f:\n",
-    "        lines = f.readlines()\n",
-    "    output = [str.rstrip(line) for line in lines]    \n",
-    "    return output"
+    "import urllib.request\n",
+    "\n",
+    "def gather_input_data(url, sessionId, transform=lambda x: str(x, \"utf-8\").strip('\\n')):\n",
+    "    request = urllib.request.Request(url)\n",
+    "    request.add_header(\"cookie\", \"session={}\".format(sessionId)) # Source the data directly from AoC\n",
+    "\n",
+    "    values = []\n",
+    "    with urllib.request.urlopen(request) as data:\n",
+    "        for line in data:\n",
+    "            values.append(transform(line))\n",
+    "\n",
+    "    return values"
    ]
   },
   {
@@ -26,7 +58,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sessionId = '53616c7465645f5f8470e6a4190008858c3b31263eba45359fbf74d0372f05e0c54b1d484b0a6510947dd2e09f9300f9'\n",
+    "url = \"https://adventofcode.com/2021/day/12/input\"\n",
+    "data = gather_input_data(url, sessionId)\n"
+   ]
   }
  ],
  "metadata": {
