--- a/2021AoCDay9.ipynb
+++ b/2021AoCDay9.ipynb
@@ -1,75 +1,36 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"1000\"\n",
+       "            height=\"600\"\n",
+       "            src=\"https://adventofcode.com/2021/day/9\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f7f486ff080>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## --- Day 9: Smoke Basin ---\n",
-    "These caves seem to be lava tubes. Parts are even still volcanically active; small hydrothermal vents release smoke into the caves that slowly settles like rain.\n",
-    "\n",
-    "If you can model how the smoke flows through the caves, you might be able to avoid it and be that much safer. The submarine generates a heightmap of the floor of the nearby caves for you (your puzzle input).\n",
-    "\n",
-    "Smoke flows to the lowest point of the area it's in. For example, consider the following heightmap:\n",
-    "\n",
-    "2199943210\n",
-    "3987894921\n",
-    "9856789892\n",
-    "8767896789\n",
-    "9899965678\n",
-    "Each number corresponds to the height of a particular location, where 9 is the highest and 0 is the lowest a location can be.\n",
-    "\n",
-    "Your first goal is to find the low points - the locations that are lower than any of its adjacent locations. Most locations have four adjacent locations (up, down, left, and right); locations on the edge or corner of the map have three or two adjacent locations, respectively. (Diagonal locations do not count as adjacent.)\n",
-    "\n",
-    "In the above example, there are four low points, all highlighted: two are in the first row (a 1 and a 0), one is in the third row (a 5), and one is in the bottom row (also a 5). All other locations on the heightmap have some lower adjacent location, and so are not low points.\n",
-    "\n",
-    "The risk level of a low point is 1 plus its height. In the above example, the risk levels of the low points are 2, 1, 6, and 6. The sum of the risk levels of all low points in the heightmap is therefore 15.\n",
-    "\n",
-    "Find all of the low points on your heightmap. What is the sum of the risk levels of all low points on your heightmap?\n",
-    "\n",
-    "Your puzzle answer was 480.\n",
-    "\n",
-    "## --- Part Two ---\n",
-    "Next, you need to find the largest basins so you know what areas are most important to avoid.\n",
-    "\n",
-    "A basin is all locations that eventually flow downward to a single low point. Therefore, every low point has a basin, although some basins are very small. Locations of height 9 do not count as being in any basin, and all other locations will always be part of exactly one basin.\n",
-    "\n",
-    "The size of a basin is the number of locations within the basin, including the low point. The example above has four basins.\n",
-    "\n",
-    "The top-left basin, size 3:\n",
-    "\n",
-    "2199943210\n",
-    "3987894921\n",
-    "9856789892\n",
-    "8767896789\n",
-    "9899965678\n",
-    "The top-right basin, size 9:\n",
-    "\n",
-    "2199943210\n",
-    "3987894921\n",
-    "9856789892\n",
-    "8767896789\n",
-    "9899965678\n",
-    "The middle basin, size 14:\n",
-    "\n",
-    "2199943210\n",
-    "3987894921\n",
-    "9856789892\n",
-    "8767896789\n",
-    "9899965678\n",
-    "The bottom-right basin, size 9:\n",
-    "\n",
-    "2199943210\n",
-    "3987894921\n",
-    "9856789892\n",
-    "8767896789\n",
-    "9899965678\n",
-    "Find the three largest basins and multiply their sizes together. In the above example, this is 9 * 14 * 9 = 1134.\n",
-    "\n",
-    "What do you get if you multiply together the sizes of the three largest basins?\n",
-    "\n",
-    "Your puzzle answer was 1045660.\n",
-    "\n",
-    "Both parts of this puzzle are complete! They provide two gold stars: **"
+    "from IPython.display import IFrame\n",
+    "url = \"https://adventofcode.com/2021/day/9\"\n",
+    "IFrame(src=url, width=1000, height=600)"
    ]
   },
   {
