--- a/2022AoCDay2.ipynb
+++ b/2022AoCDay2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -12,30 +12,31 @@
        "        <iframe\n",
        "            width=\"1000\"\n",
        "            height=\"600\"\n",
-       "            src=\"https://adventofcode.com/2021\"\n",
+       "            src=\"https://adventofcode.com/2022\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
+       "            \n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7facc0ab6828>"
+       "<IPython.lib.display.IFrame at 0x10b576af0>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from IPython.display import IFrame\n",
-    "url = \"https://adventofcode.com/2021\"\n",
+    "url = \"https://adventofcode.com/2022\"\n",
     "IFrame(src=url, width=1000, height=600)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,18 +56,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = \"https://adventofcode.com/2021/day/12/input\"\n",
+    "sessionId='53616c7465645f5fc5078d6e8e6271ce275aa235fd8ea17a49ee4bd964ad0cb828d63071d2c465211730bce73e9d6ba904e04c70dbd605d568a22a62f661b75b'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://adventofcode.com/2022/day/2/input\"\n",
     "data = gather_input_data(url, sessionId)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "win_lose_draw = {'A X':3, 'A Y':6, 'A Z':0, 'B X':0, 'B Y':3, 'B Z':6, 'C X':6, 'C Y':0, 'C Z':3}\n",
+    "your_play = {'X':1, 'Y':2, 'Z':3}\n",
+    "part1 = sum([win_lose_draw[shoot] + your_play[shoot[-1]] for shoot in data])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loose_draw_win = {'A X':'Z', 'A Y':'X', 'A Z':'Y', 'B X':'X', 'B Y':'Y', 'B Z':'Z', 'C X':'Y', 'C Y':'Z', 'C Z':'X'}\n",
+    "outcome = {'X':0, 'Y':3, 'Z':6}\n",
+    "part2 = sum([your_play[loose_draw_win[shoot]] + outcome[shoot[-1]]  for shoot in data])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -80,7 +126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
