--- a/2021AoCDay14.ipynb
+++ b/2021AoCDay14.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 460,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -15,14 +15,15 @@
        "            src=\"https://adventofcode.com/2021/day/14\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
+       "            \n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f4f4cbe0c88>"
+       "<IPython.lib.display.IFrame at 0x10f7e72b0>"
       ]
      },
-     "execution_count": 460,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 418,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,9 +105,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 461,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'sessionId' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [3]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m url \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttps://adventofcode.com/2021/day/14/input\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 2\u001b[0m data \u001b[38;5;241m=\u001b[39m gather_input_data(url, \u001b[43msessionId\u001b[49m)\n\u001b[1;32m      3\u001b[0m base \u001b[38;5;241m=\u001b[39m data[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m      4\u001b[0m rules \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mdict\u001b[39m([val\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m -> \u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;28;01mfor\u001b[39;00m val \u001b[38;5;129;01min\u001b[39;00m data[\u001b[38;5;241m2\u001b[39m:]])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sessionId' is not defined"
+     ]
+    }
+   ],
    "source": [
     "url = \"https://adventofcode.com/2021/day/14/input\"\n",
     "data = gather_input_data(url, sessionId)\n",
@@ -193,7 +206,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -207,7 +220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
