--- a/Advent Bag of Tricks.ipynb
+++ b/Advent Bag of Tricks.ipynb
@@ -65,7 +65,9 @@
     "import itertools\n",
     "records = [' '.join(list(y)).split() for x, y in itertools.groupby(data, lambda z: z == '') if not x]\n",
     "\n",
-    "\n"
+    "\n",
+    "## convert a list of strings into int\n",
+    "list(map(int, list_of_strings))"
    ]
   },
   {
@@ -187,7 +189,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -201,7 +203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
