adding day 3, some clean up on the other 2 days

--- a/2022AoCDay1.ipynb
+++ b/2022AoCDay1.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,45 +51,19 @@
     "        for line in data:\n",
     "            values.append(transform(line))\n",
     "\n",
-    "    return values"
+    "    return values\n",
+    "\n",
+    "def get_data(day, year=2022):\n",
+    "    with open('sessionID') as f:\n",
+    "        sessionId = f.readlines()[0]\n",
+    "    url = \"https://adventofcode.com/%d/day/%d/input\"%(year,day)\n",
+    "    data = gather_input_data(url, sessionId)\n",
+    "    return data\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sessionId='53616c7465645f5fc5078d6e8e6271ce275aa235fd8ea17a49ee4bd964ad0cb828d63071d2c465211730bce73e9d6ba904e04c70dbd605d568a22a62f661b75b'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "url = \"https://adventofcode.com/2022/day/1/input\"\n",
-    "data = gather_input_data(url, sessionId)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import itertools\n",
-    "records = [list(map(int, y)) for x, y in itertools.groupby(data, lambda z: z == '') if not x]\n",
-    "calories = [sum(elf) for elf in records]\n",
-    "part1 = max(calories)\n",
-    "part2 = sum(sorted(calories, reverse=True)[:3])\n",
-    "print(part1, part2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +74,15 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "import itertools\n",
+    "data = get_data(1)\n",
+    "records = [list(map(int, y)) for x, y in itertools.groupby(data, lambda z: z == '') if not x]\n",
+    "calories = [sum(elf) for elf in records]\n",
+    "part1 = max(calories)\n",
+    "part2 = sum(sorted(calories, reverse=True)[:3])\n",
+    "print(part1, part2)"
+   ]
   },
   {
    "cell_type": "code",
