--- a/2022AoCDay3.ipynb
+++ b/2022AoCDay3.ipynb
@@ -20,7 +20,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x10b576af0>"
+       "<IPython.lib.display.IFrame at 0x111dbe4c0>"
       ]
      },
      "execution_count": 1,
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,49 +63,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def intersection_list_of_sets(list_of_objects):\n",
+    "    ## convert a list of objects into a list of sets\n",
+    "    list_of_sets = [set(val) for val in list_of_objects]\n",
+    "    ## find the intersection between all set in a list\n",
+    "    out = set.intersection(*list_of_sets)\n",
+    "    return list(out)[0]\n",
+    "\n",
+    "def split_in_half(code):\n",
+    "    return [code[:len(code)//2], code[(len(code)//2):]]\n",
+    "\n",
+    "def char_num(val):\n",
+    "    out = ord(val) - ord('a')  + 1\n",
+    "    if out<0:\n",
+    "        out = out + 58\n",
+    "    return out\n",
+    "\n",
+    "def convert(val):\n",
+    "    return char_num(intersection_list_of_sets(split_in_half(val)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12679 14470\n"
+      "7817 2444\n"
      ]
     }
    ],
    "source": [
-    "data = get_data(2)\n",
-    "win_lose_draw = {'A X':3, 'A Y':6, 'A Z':0, 'B X':0, 'B Y':3, 'B Z':6, 'C X':6, 'C Y':0, 'C Z':3}\n",
-    "your_play = {'X':1, 'Y':2, 'Z':3}\n",
-    "part1 = sum([win_lose_draw[shoot] + your_play[shoot[-1]] for shoot in data])\n",
+    "data = get_data(3)\n",
+    "part1 = sum([convert(code) for code in data])\n",
     "\n",
-    "loose_draw_win = {'A X':'Z', 'A Y':'X', 'A Z':'Y', 'B X':'X', 'B Y':'Y', 'B Z':'Z', 'C X':'Y', 'C Y':'Z', 'C Z':'X'}\n",
-    "outcome = {'X':0, 'Y':3, 'Z':6}\n",
-    "part2 = sum([your_play[loose_draw_win[shoot]] + outcome[shoot[-1]]  for shoot in data])\n",
+    "## part 2\n",
+    "i = iter(data)\n",
+    "data_in_threes = zip(i, i, i) # read 3 items off the top of a list at one time\n",
+    "priority = 0\n",
+    "for val in data_in_threes:\n",
+    "    priority = priority + (char_num(intersection_list_of_sets(val)))\n",
     "\n",
-    "print(part1, part2)"
+    "print(part1, priority)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "67"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ord(data[0][0])"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
