--- a/Advent Bag of Tricks.ipynb
+++ b/Advent Bag of Tricks.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'s'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "## string to list of characters\n",
     "\n",
@@ -49,6 +38,11 @@
     "def list_str_intersection(a,b):\n",
     "    return list(set(a).intersection(b))\n",
     "\n",
+    "## convert a list of objects into a list of sets\n",
+    "list_of_sets = [set(val) for val in list_of_objects]\n",
+    "## find the intersection between all set in a list\n",
+    "set.intersection(*list_of_sets)\n",
+    "\n",
     "def list_str_not_intersection(a,b):\n",
     "    return list(set(a).symmetric_difference(b))\n",
     "\n",
@@ -66,8 +60,15 @@
     "records = [' '.join(list(y)).split() for x, y in itertools.groupby(data, lambda z: z == '') if not x]\n",
     "\n",
     "\n",
-    "## convert a list of strings into int\n",
-    "list(map(int, list_of_strings))"
+    "## convert a list of strings into a list of int\n",
+    "list(map(int, list_of_strings))\n",
+    "\n",
+    "## convert a character to unicode \n",
+    "ord(charaacter_variable)\n",
+    "\n",
+    "## parse a list (data) n items at a time (in this case 3)\n",
+    "i = iter(data)\n",
+    "data_in_threes = zip(i, i, i)"
    ]
   },
   {
@@ -77,7 +78,7 @@
    "outputs": [],
    "source": [
     "class Point(object):\n",
-    "    '''Creates a point on a coordinate plane with from a list [x,y].'''\n",
+    "    '''Creates a point on a coordinate plane from a list [x,y].'''\n",
     "\n",
     "    def __init__(self, coord):\n",
     "        '''Defines x and y variables'''\n",
@@ -184,6 +185,38 @@
     "    peak[0] = 0\n",
     "    peak = np.append(peak, [0])\n",
     "    return peak\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## get data from AoC\n",
+    "## you need to read the sessionID after you log in, and then go to an input page\n",
+    "## in Chrome view->developer->inspect elements (look under the network tab) for request headers cookie\n",
+    "## https://github.com/wimglenn/advent-of-code-wim/issues/1\n",
+    "\n",
+    "import urllib.request\n",
+    "\n",
+    "def gather_input_data(url, sessionId, transform=lambda x: str(x, \"utf-8\").strip('\\n')):\n",
+    "    request = urllib.request.Request(url)\n",
+    "    request.add_header(\"cookie\", \"session={}\".format(sessionId)) # Source the data directly from AoC\n",
+    "\n",
+    "    values = []\n",
+    "    with urllib.request.urlopen(request) as data:\n",
+    "        for line in data:\n",
+    "            values.append(transform(line))\n",
+    "\n",
+    "    return values\n",
+    "\n",
+    "def get_data(day, year=2022):\n",
+    "    with open('sessionID') as f:\n",
+    "        sessionId = f.readlines()[0]\n",
+    "    url = \"https://adventofcode.com/%d/day/%d/input\"%(year,day)\n",
+    "    data = gather_input_data(url, sessionId)\n",
+    "    return data\n"
    ]
   }
  ],
