--- a/2022AoCDay3.ipynb
+++ b/2022AoCDay3.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
     "def char_num(val):\n",
     "    out = ord(val) - ord('a')  + 1\n",
     "    if out<0:\n",
-    "        out = out + 58\n",
+    "        out = out + ord('a') - ord('A') + 26\n",
     "    return out\n",
     "\n",
     "def convert(val):\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
