--- a/template.ipynb
+++ b/template.ipynb
@@ -66,26 +66,7 @@
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def intersection_list_of_sets(list_of_objects):\n",
-    "    ## convert a list of objects into a list of sets\n",
-    "    list_of_sets = [set(val) for val in list_of_objects]\n",
-    "    ## find the intersection between all set in a list\n",
-    "    out = set.intersection(*list_of_sets)\n",
-    "    return list(out)[0]\n",
-    "\n",
-    "def split_in_half(code):\n",
-    "    return [code[:len(code)//2], code[(len(code)//2):]]\n",
-    "\n",
-    "def char_num(val):\n",
-    "    out = ord(val) - ord('a')  + 1\n",
-    "    if out<0:\n",
-    "        out = out + ord('a') - ord('A') + 26\n",
-    "    return out\n",
-    "\n",
-    "def convert(val):\n",
-    "    return char_num(intersection_list_of_sets(split_in_half(val)))\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -101,17 +82,7 @@
     }
    ],
    "source": [
-    "data = get_data(3)\n",
-    "part1 = sum([convert(code) for code in data])\n",
-    "\n",
-    "## part 2\n",
-    "i = iter(data)\n",
-    "data_in_threes = zip(i, i, i) # read 3 items off the top of a list at one time\n",
-    "priority = 0\n",
-    "for val in data_in_threes:\n",
-    "    priority = priority + (char_num(intersection_list_of_sets(val)))\n",
-    "\n",
-    "print(part1, priority)"
+    "data = get_data(3)\n"
    ]
   },
   {
