--- a/2022/2022AoCDay4.ipynb
+++ b/2022/2022AoCDay4.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,259 +83,30 @@
     "\n",
     "def is_overlap(val):\n",
     "    s1, s2 = parse_and_make_sets(val)\n",
-    "    len(s1.intersect(s2)) + s2.intersect(s1)\n",
-    "    return "
+    "    return len(s1.intersection(s2)) > 0\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "466"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "466\n",
+      "865\n"
+     ]
     }
    ],
    "source": [
     "data = get_data(4)\n",
     "\n",
-    "# data = ['2-4,6-8',\n",
-    "# '2-3,4-5',\n",
-    "# '5-7,7-9',\n",
-    "# '2-8,3-7',\n",
-    "# '6-6,4-6',\n",
-    "# '2-6,4-8']\n",
-    "sum([is_subset(val) for val in data])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s1, s2 = parse_and_make_sets(data[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "90"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(s1.intersection(s2)) > 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{15,\n",
-       " 16,\n",
-       " 17,\n",
-       " 18,\n",
-       " 19,\n",
-       " 20,\n",
-       " 21,\n",
-       " 22,\n",
-       " 23,\n",
-       " 24,\n",
-       " 25,\n",
-       " 26,\n",
-       " 27,\n",
-       " 28,\n",
-       " 29,\n",
-       " 30,\n",
-       " 31,\n",
-       " 32,\n",
-       " 33,\n",
-       " 34,\n",
-       " 35,\n",
-       " 36,\n",
-       " 37,\n",
-       " 38,\n",
-       " 39,\n",
-       " 40,\n",
-       " 41,\n",
-       " 42,\n",
-       " 43,\n",
-       " 44,\n",
-       " 45,\n",
-       " 46,\n",
-       " 47,\n",
-       " 48,\n",
-       " 49,\n",
-       " 50,\n",
-       " 51,\n",
-       " 52,\n",
-       " 53,\n",
-       " 54,\n",
-       " 55,\n",
-       " 56,\n",
-       " 57,\n",
-       " 58,\n",
-       " 59}"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "s2.intersection(s1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{15,\n",
-       " 16,\n",
-       " 17,\n",
-       " 18,\n",
-       " 19,\n",
-       " 20,\n",
-       " 21,\n",
-       " 22,\n",
-       " 23,\n",
-       " 24,\n",
-       " 25,\n",
-       " 26,\n",
-       " 27,\n",
-       " 28,\n",
-       " 29,\n",
-       " 30,\n",
-       " 31,\n",
-       " 32,\n",
-       " 33,\n",
-       " 34,\n",
-       " 35,\n",
-       " 36,\n",
-       " 37,\n",
-       " 38,\n",
-       " 39,\n",
-       " 40,\n",
-       " 41,\n",
-       " 42,\n",
-       " 43,\n",
-       " 44,\n",
-       " 45,\n",
-       " 46,\n",
-       " 47,\n",
-       " 48,\n",
-       " 49,\n",
-       " 50,\n",
-       " 51,\n",
-       " 52,\n",
-       " 53,\n",
-       " 54,\n",
-       " 55,\n",
-       " 56,\n",
-       " 57,\n",
-       " 58,\n",
-       " 59,\n",
-       " 60}"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "s1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{14,\n",
-       " 15,\n",
-       " 16,\n",
-       " 17,\n",
-       " 18,\n",
-       " 19,\n",
-       " 20,\n",
-       " 21,\n",
-       " 22,\n",
-       " 23,\n",
-       " 24,\n",
-       " 25,\n",
-       " 26,\n",
-       " 27,\n",
-       " 28,\n",
-       " 29,\n",
-       " 30,\n",
-       " 31,\n",
-       " 32,\n",
-       " 33,\n",
-       " 34,\n",
-       " 35,\n",
-       " 36,\n",
-       " 37,\n",
-       " 38,\n",
-       " 39,\n",
-       " 40,\n",
-       " 41,\n",
-       " 42,\n",
-       " 43,\n",
-       " 44,\n",
-       " 45,\n",
-       " 46,\n",
-       " 47,\n",
-       " 48,\n",
-       " 49,\n",
-       " 50,\n",
-       " 51,\n",
-       " 52,\n",
-       " 53,\n",
-       " 54,\n",
-       " 55,\n",
-       " 56,\n",
-       " 57,\n",
-       " 58,\n",
-       " 59}"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "s2"
+    "\n",
+    "print(sum([is_subset(val) for val in data]))  # part 1\n",
+    "print(sum([is_overlap(val) for val in data])) # part 2"
    ]
   },
   {
